--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Messenger</title>
 </head>
 <body>
-    
+    <div class="root">
+        
+    </div>
+    Unfortunately, no mobile design
 </body>
 </html>
