establish main sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="root">
-        
+        <div class="menu">
+            
+        </div>
+        <div class="chat">
+
+        </div>
     </div>
     Unfortunately, no mobile design
 </body>
