fill menu header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="root">
         <div class="menu">
             <div class="menu-header">
-                
+                <h1>Razor Messenger</h1>
             </div>
             <div class="menu-items">
                 
