--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
                 <h1>Razor Messenger</h1>
             </div>
             <div class="menu-items">
-                
+                <div class="menu-item">
+                    <img src="" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>Username</h2>
+                        <p>LastMessageText</p>
+                    </div>
+                    <div class="menu-item-notification"></div>
+                </div>
             </div>
         </div>
         <div class="chat">
