--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             </div>
         </div>
         <div class="chat">
-
+            <div class="chat-header">
+                <img src="" class="user-avatar">
+                <h1>Username</h1>
+            </div>
         </div>
     </div>
     Unfortunately, no mobile design
