--- a/index.html
+++ b/index.html
@@ -14,20 +14,118 @@
                 <h1>Razor Messenger</h1>
             </div>
             <div class="menu-items">
+                <div class="menu-item selected">
+                    <img src="" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>Bri'ish fella</h2>
+                        <p>You: going out today with my girl :glasses:</p>
+                    </div>
+                    <div class="menu-item-notification"></div>
+                </div>
                 <div class="menu-item">
                     <img src="" class="user-avatar">
                     <div class="menu-item-data">
-                        <h2>Username</h2>
-                        <p>LastMessageText</p>
+                        <h2>American pal</h2>
+                        <p>nah man, thats sus a little bit</p>
+                    </div>
+                    <div class="menu-item-notification active"></div>
+                </div>
+                <div class="menu-item">
+                    <img src="" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>Bodogato</h2>
+                        <p>You: aight, see you tomorrow</p>
                     </div>
                     <div class="menu-item-notification"></div>
+                </div>
+                <div class="menu-item">
+                    <img src="" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>Babe</h2>
+                        <p>You: Love you too!</p>
+                    </div>
+                    <div class="menu-item-notification"></div>
+                </div>
+                <div class="menu-item">
+                    <img src="" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>He who uninstalled</h2>
+                        <p>I uninstalled</p>
+                    </div>
+                    <div class="menu-item-notification active"></div>
                 </div>
             </div>
         </div>
         <div class="chat">
             <div class="chat-header">
                 <img src="" class="user-avatar">
-                <h1>Username</h1>
+                <h1>Bri'ish fella</h1>
+            </div>
+            <div class="chat-messages">
+                <div class="message opponent">
+                    <div class="message-data">
+                        <p>Hello there my distinguished friend!</p>
+                        <span class="message-data-time">12:00</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="message-data">
+                        <p>heyy</p>
+                        <span class="message-data-time">12:00</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="message-data">
+                        <p>how are you doing pal? how are the boys?</p>
+                        <span class="message-data-time">12:01</p>
+                    </div>
+                </div>
+                <div class="message opponent">
+                    <div class="message-data">
+                        <p>My mates are doing just fine. We've been drinking some fine tea today</p>
+                        <span class="message-data-time">12:01</p>
+                    </div>
+                </div>
+                <div class="message opponent">
+                    <div class="message-data">
+                        <p>I can not even begin to describe how magnificent the tea was</p>
+                        <span class="message-data-time">12:01</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="message-data">
+                        <p>lmao you brits with your tea :crylaugh:</p>
+                        <span class="message-data-time">12:02</p>
+                    </div>
+                </div>
+                <div class="message opponent">
+                    <div class="message-data">
+                        <p>You don't say that!</p>
+                        <span class="message-data-time">12:02</p>
+                    </div>
+                </div>
+                <div class="message opponent">
+                    <div class="message-data">
+                        <p>How are you though?</p>
+                        <span class="message-data-time">12:02</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="message-data">
+                        <p>im fine, thx.</p>
+                        <span class="message-data-time">12:02</p>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="message-data">
+                        <p>going out today with my girl :glasses:</p>
+                        <span class="message-data-time">12:03</p>
+                    </div>
+                </div>
+            </div>
+            <div class="chat-send">
+                <input type="text" class="chat-send-input" placeholder="Type a message...">
+                <button class="chat-send-button">Send</button>
             </div>
         </div>
     </div>
