finallize window design

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
                 <h1>Razor Messenger</h1>
             </div>
             <div class="menu-items">
-                <div class="menu-item selected">
-                    <img src="" class="user-avatar">
-                    <div class="menu-item-data">
-                        <h2>Bri'ish fella</h2>
-                        <p>You: going out today with my girl :glasses:</p>
-                    </div>
-                    <div class="menu-item-notification"></div>
-                </div>
                 <div class="menu-item">
-                    <img src="" class="user-avatar">
+                    <img src="img/ameriacan.jpg" class="user-avatar">
                     <div class="menu-item-data">
                         <h2>American pal</h2>
                         <p>nah man, thats sus a little bit</p>
                     </div>
                     <div class="menu-item-notification active"></div>
                 </div>
+                <div class="menu-item selected">
+                    <img src="img/briish.jpg" class="user-avatar">
+                    <div class="menu-item-data">
+                        <h2>Bri'ish fella</h2>
+                        <p>You: going out today with my girl 😎</p>
+                    </div>
+                    <div class="menu-item-notification"></div>
+                </div>
                 <div class="menu-item">
-                    <img src="" class="user-avatar">
+                    <img src="img/bodogato.png" class="user-avatar">
                     <div class="menu-item-data">
                         <h2>Bodogato</h2>
                         <p>You: aight, see you tomorrow</p>
@@ -39,7 +39,7 @@
                     <div class="menu-item-notification"></div>
                 </div>
                 <div class="menu-item">
-                    <img src="" class="user-avatar">
+                    <img src="img/babe.png" class="user-avatar">
                     <div class="menu-item-data">
                         <h2>Babe</h2>
                         <p>You: Love you too!</p>
@@ -47,7 +47,7 @@
                     <div class="menu-item-notification"></div>
                 </div>
                 <div class="menu-item">
-                    <img src="" class="user-avatar">
+                    <img src="img/he.png" class="user-avatar">
                     <div class="menu-item-data">
                         <h2>He who uninstalled</h2>
                         <p>I uninstalled</p>
@@ -58,7 +58,7 @@
         </div>
         <div class="chat">
             <div class="chat-header">
-                <img src="" class="user-avatar">
+                <img src="img/briish.jpg" class="user-avatar">
                 <h1>Bri'ish fella</h1>
             </div>
             <div class="chat-messages">
@@ -94,7 +94,7 @@
                 </div>
                 <div class="message">
                     <div class="message-data">
-                        <p>lmao you brits with your tea :crylaugh:</p>
+                        <p>lmao you brits with your tea 😂</p>
                         <span class="message-data-time">12:02</p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="message">
                     <div class="message-data">
-                        <p>going out today with my girl :glasses:</p>
+                        <p>going out today with my girl 😎</p>
                         <span class="message-data-time">12:03</p>
                     </div>
                 </div>
@@ -129,6 +129,5 @@
             </div>
         </div>
     </div>
-    Unfortunately, no mobile design
 </body>
 </html>
